--- a/template/footer.html
+++ b/template/footer.html
@@ -1,2 +1,8 @@
+    <footer>
+      @koba04
+    </footer>
+  </article>
+  <script src="/js/vendor.js"></script>
+  <script src="/js/app.js"></script>
 </body>
 </html>
