--- a/template/header.html
+++ b/template/header.html
@@ -12,13 +12,6 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
 </head>
-<body ng-app>
+<body ng-app="myapp">
   <article class="container">
-    <div ng-view></div>
-  </article>
-  <footer>
-    @koba04
-  </footer>
-  <script src="/js/vendor.js"></script>
-  <script src="/js/app.js"></script>
-
+    <div class="view" ng-view></div>
