--- a/template/controllers/page2.html
+++ b/template/controllers/page2.html
@@ -1,5 +1,6 @@
-<script type="text/ng-template" id="top.html">
-<h1>Top</h1>
-<div>This is Top Page</div>
-<a href="#/page2">page2</a>
+<script type="text/ng-template" id="page2.html">
+<div class="jumbotron">
+  <h1>Page2</h1>
+  <a class="btn btn-lg btn-default" href="#/">Back to Top</a>
+</div>
 </script>
