--- a/template/footer.html
+++ b/template/footer.html
@@ -1,5 +1,5 @@
-    <footer>
-      @koba04
+    <footer class="well">
+      <p>@koba04</p>
     </footer>
   </article>
   <script src="/js/vendor.js"></script>
