--- a/template/controllers/top.html
+++ b/template/controllers/top.html
@@ -1,6 +1,6 @@
 <script type="text/ng-template" id="top.html">
 <div class="jumbotron">
-  <h1>ngAnimate Sample</h1>
+  <h1>ngAnimate Demo</h1>
   <ul class="list-group">
     <li class="list-group-item" ng-repeat="element in list track by $index" >{{element}}</li>
   </ul>
