--- a/template/header.html
+++ b/template/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <title>my angular app</title>
+  <title>ngAnimate Demo</title>
   <meta charset="utf8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/vendor.css">
